# algorithmic

./: README.md
cpp/: CMakeLists.txt
cpp/include/types/: Array.hpp  Exceptions.hpp  LinkedList.hpp  Optional.hpp  Tree.hpp  Vector.hpp
cpp/src/: main.cpp
cpp/tests/types/: ArrayTests.cpp  LinkedListTests.cpp  VectorTests.cpp
